# foundry-mcp

./: .gitignore  README.md  pyproject.toml
src/eth_wh_mcp/: main.py
