[project]
name = "eth-wh-mcp"
version = "0.1.0"
description = "Foundry MCP Server"
readme = "README.md"
authors = [
    { name = "Luiz Hemerly", email = "lechemerly@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
]

[project.scripts]
eth-wh-mcp = "eth_wh_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]
